<resources>
    <string name="app_name">Virtual Peer</string>
    <string name="pref_first_launch_time" translatable="false">firstLaunchTime</string>
    <string name="pref_current_user_activity" translatable="false">currentUserActivity</string>
    <string name="nav_start">Start</string>
    <string name="nav_stats">Statistics</string>
    <string name="nav_drawer_help">Help</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_open">Open menu</string>
    <string name="nav_drawer_close">Close menu</string>
    <string name="pref_look_and_feel" translatable="false">lookAndFeel</string>
    <string name="pref_notifications" translatable="false">notifications</string>
    <string name="pref_about" translatable="false">about</string>
    <string name="pref_look_and_feel_title">Look and feel</string>
    <string name="pref_look_and_feel_summary">Theme, language</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_about_title">About</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum dolor</string>
    <string name="lorem_ipsum_medium" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci eu lobortis elementum nibh. Lectus mauris ultrices eros in cursus turpis massa tincidunt. Mattis pellentesque id nibh tortor id aliquet. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Sit amet commodo nulla facilisi nullam vehicula ipsum a arcu. Tellus rutrum tellus pellentesque eu.</string>
    <string name="nav_drawer_survey">Survey</string>
    <string name="survey_start">Start</string>
    <string name="survey_next">Next</string>
    <string name="survey_answer_hint">Answer</string>
    <string name="survey_back">Back</string>
    <string name="survey_finish">Finish</string>
    <string name="user_activity_current_display">You\'re currently %1$s</string>
    <string name="user_activity_current_change">Change</string>
    <string name="user_activity_current_not_set">No activity is currently set</string>
    <string name="user_activity_change_text">Choose what best describes what you\'re currently doing</string>
    <string name="user_activity_change_activity_1">Work, studying</string>
    <string name="user_activity_change_activity_2">Essential things</string>
    <string name="user_activity_change_activity_3">Free time, rewards</string>
    <string name="user_activity_current_work">studying</string>
    <string name="user_activity_current_essential">doing something essential</string>
    <string name="user_activity_current_rewards">rewarding yourself</string>
    <string name="nav_chat">Chat</string>
    <string name="chat_hint">Type a message</string>
    <string name="chat_send">Send</string>
    <string name="start_chart_dataset_label">Activities</string>
    <string name="chat_submit">Submit</string>
    <string name="nav_library">Library</string>
    <string name="app_usage_chart_dataset_label">App usage</string>
    <string name="app_usage_chart_time_format_below_1h">%1$dm</string>
    <string name="app_usage_chart_time_format">%1$dh %2$dm</string>
    <string name="stats_app_usage_title">App usage</string>
    <string name="stats_screen_time_title">Screen time</string>
    <string name="stats_screen_time_total">%1$dh %2$dm total</string>
    <string name="stats_screen_time_total_below_1h">%1$dm total</string>
    <string name="stats_app_usage_description">Tap for more</string>
    <string name="pomodoro_start_message">Hallo %1$s! Willkommen zu deinem Lernworkout! Ja, du hast richtig gehört! Jetzt wird Sport gemacht! Und zwar fürs Gehirn.</string>
    <string name="pomodoro_start_message_more_info">Erzähl mir mehr über die Pomodoro-Technik!</string>
    <string name="pomodoro_more_info_message">Die Pomodoro-Technik ist eine Lerntechnik, die in 25 Minuten Intervallen absolviert wird. Nach den 25 Minuten hast du dir dann eine 5 Minuten Pause verdient, in der du Lüften oder einfach mal aufstehen kannst. Die Pausen und Lernintervalle werden jeweils mit einem Gong eingeleitet und auch beendet. Um deine Lernintervalle zu definieren, trägst du als erstes deine Lernziele in deine Pomodoro-Tabelle ein. Diese sollten in den 25 Minuten zu schaffen sein. Als Beispiel kannst du dir deine Vorlesung in Abschnitte unterteilen. (Tipp: Wenn du vor den 25 Minuten fertig bist, wiederhole doch gerne den Part, der dir am anspruchsvollsten vorkam). Nach 3 Lerneinheiten hast du dir eine 30-minütige Pause verdient. Wichtig: Während den Lernintervallen solltest du jeglichen Social-Media-Einfluss ausschalten. Schalte die Apps auf deinem Handy am besten auf stumm. Jegliche Ablenkung kann nämlich deinen Lernflow stören.\nAlso? Are you ready?</string>
    <string name="pomodoro_start_message_start">Let\'s go!</string>
    <string name="pomodoro_more_info_message_yes">Yes!</string>
    <string name="pomodoro_more_info_message_not_now">Doch nicht</string>
    <string name="stats_screen_unlock_count_title">Device unlocked</string>
    <string name="stats_screen_unlock_count_description_one">1 time</string>
    <string name="stats_screen_unlock_count_description">%1$d times</string>
    <string name="pomodoro_learning_content_message">Trage als erstes deine Lerninhalte in 25 Minuten-Intervalle ein.\n(Hinweis: Trage dir realistische Ziele ein, die einerseits motivierend, aber andererseits nicht überfordernd sind)</string>
    <string name="pomodoro_learning_content_message_ready">Ready</string>
    <string name="pomodoro_learning_content_message_back">Zurück</string>
    <string name="pomodoro_learning_content_screen_no_content">Deine Lerninhalte werden hier angezeigt</string>
    <string name="pomodoro_learning_content_dialog_title">Neuer Lerninhalt</string>
    <string name="pomodoro_learning_content_dialog_add">Hinzufügen</string>
    <string name="pomodoro_learning_content_dialog_cancel">Abbrechen</string>
    <string name="pomodoro_learning_content_duration">%1$dm</string>
    <string name="pomodoro_learning_content_break">Pause</string>
    <string name="pomodoro_learning_content_finished_message">Alright! Stelle nun sicher, dass du allerlei Ablenkung beiseite geschaffen hast. Wenn du fertig bist, dir etwas zu Trinken hingestellt und dir einen ruhigen Platz gesucht hast, kannst du starten!</string>
    <string name="pomodoro_learning_content_finished_message_ready">Ich bin ready!</string>
    <string name="pomodoro_learning_content_finished_message_back">Zurück</string>
    <string name="pomodoro_notification_channel_name">Pomodoro-Benachrichtigungen</string>
    <string name="pomodoro_notification_channel_description">Beinhaltet alle Benachrichtigungen, die mit der Pomodoro-Übung zusammenhängen.</string>
    <string name="pomodoro_notification_title">Pomodoro</string>
    <string name="pomodoro_notification_content_learning_content">%1$s: %2$dm %3$ds left</string>
    <string name="pomodoro_notification_content_learning_content_seconds">%1$s: %2$ds left</string>
    <string name="pomodoro_notification_content_break">Pause: %1$dm %2$ds left</string>
    <string name="pomodoro_notification_content_break_seconds">Pause: %1$ds left</string>
    <string name="pomodoro_notification_finish_title">Pomodoro beendet</string>
    <string name="pomodoro_notification_finish_content">Tippe hier, um die Übung zu bewerten</string>
    <string name="pomodoro_finish_message">Geschafft! Und wie war dein Workout?</string>
    <string name="pomodoro_finish_message_got_everything_done">Ich habe alles geschafft, was ich mir vorgenommen habe.</string>
    <string name="pomodoro_got_everything_done_message">Prima! Ich freue mich schon auf unser nächstes Lernworkout!</string>
    <string name="pomodoro_finish_message_didnt_get_everything_done">Leider nicht so, wie ich es mir vorgestellt habe.</string>
    <string name="pomodoro_didnt_get_everything_done_message_option_1">Ich habe nicht alles geschafft.</string>
    <string name="pomodoro_didnt_get_everything_done_message_option_2">Ich war heute unkonzentriert.</string>
    <string name="pomodoro_didnt_get_everything_done_message_option_3">Ich sollte mir die Einheiten anders aufteilen.</string>
    <string name="eisenhower_matrix_title">Eisenhower Matrix</string>
    <string name="eisenhower_matrix_urgent_important">Urgent &amp; important</string>
    <string name="eisenhower_matrix_not_urgent_important">Not urgent &amp; important</string>
    <string name="eisenhower_matrix_urgent_not_important">Urgent &amp; not important</string>
    <string name="eisenhower_matrix_not_urgent_not_important">Not urgent &amp; not important</string>
    <string name="eisenhower_matrix_add_goal_dialog_new_goal_hint">Goal name</string>
    <string name="eisenhower_matrix_add_goal_dialog_choose_matrix_position">Choose position in matrix</string>
    <string name="eisenhower_matrix_add_goal_dialog_choose_activity_area">Choose an activity area</string>
    <string name="user_activity_type_work">Work</string>
    <string name="user_activity_type_essential">Essential things</string>
    <string name="user_activity_type_rewards">Rewards</string>
    <string name="eisenhower_matrix_add_goal_dialog_error_empty_name">Please enter a name</string>
    <string name="eisenhower_matrix_goal_info_no_deadline">No deadline set</string>
    <string name="eisenhower_matrix_goal_info">Deadline: %1$s</string>
    <string name="eisenhower_matrix_add_goal_dialog_invalid_deadline">Please select a valid deadline</string>
    <string name="app_usage_permission_not_granted">Virtual Peer can\'t access your usage statistics</string>
    <string name="app_usage_permission_not_granted_open_settings">Open settings</string>
    <string name="app_usage_permission_not_granted_open_settings_error">Settings couldn\'t be open. Please grant the permission manually.</string>
    <string name="registration_enter_name">Please enter your name</string>
    <string name="pref_name" translatable="false">name</string>
    <string name="registration_enter_name_error_empty_name">Please enter a name</string>
    <string name="nav_drawer_my_profile">My profile</string>
    <string name="profile_input_name_title">Name</string>
    <string name="profile_input_date_of_birth_title">Date of birth</string>
    <string name="profile_input_place_of_birth_title">Place of birth</string>
    <string name="profile_input_email_title">Email</string>
    <string name="profile_input_identifier_title">Identifier</string>
    <string name="pref_date_of_birth" translatable="false">dateOfBirth</string>
    <string name="pref_place_of_birth" translatable="false">placeOfBirth</string>
    <string name="pref_email" translatable="false">email</string>
    <string name="pref_identifier" translatable="false">identifier</string>
    <string name="profile_input_email_error_empty">Please enter an email address</string>
    <string name="profile_input_identifier_error_empty">Please enter your identifier</string>
    <string name="start_user_greeting">Hello %1$s!</string>
    <string name="start_time_format">%1$02d:%2$02d</string>
    <string name="pomodoro_name">Pomodoro</string>
    <string name="box_breathing_name">Box Breathing</string>
    <string name="meditation_name">Meditation</string>
    <string name="library_exercise_last_activity">Last activity</string>
    <string name="library_exercise_total_time">Total time</string>
    <string name="library_exercise_info">Info</string>
    <string name="library_exercise_start">Start</string>
    <string name="meditation_lets_go">Let\'s go</string>
    <string name="meditation_close_your_eyes">Close your eyes in</string>
</resources>