<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/surveyInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_short"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_long" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/surveyFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundDark"
        android:layout_alignParentBottom="true"
        android:padding="7.5dp">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_back"
            android:layout_alignParentStart="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="?attr/textColor"
            android:visibility="invisible" />

        <Button
            android:id="@+id/startAndNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_start"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>