<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/chartCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7.5dp"
        android:layout_marginEnd="7.5dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/startChart"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:padding="10dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/activityCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7.5dp"
        android:layout_marginEnd="7.5dp"
        app:cardCornerRadius="10dp"
        android:layout_below="@id/chartCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/currentActivityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/currentActivityText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/user_activity_current_display"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_alignParentTop="true" />

                <Button
                    android:id="@+id/currentActivityChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_activity_current_change"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="?attr/textColor"
                    android:layout_below="@id/currentActivityText"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/changeActivityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/user_activity_change_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp">

                    <RadioButton
                        android:id="@+id/radioButtonWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_activity_change_activity_1" />

                    <RadioButton
                        android:id="@+id/radioButtonEssential"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_activity_change_activity_2" />

                    <RadioButton
                        android:id="@+id/radioButtonRewards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_activity_change_activity_3" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>