<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12.5dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectDeadlineButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eisenhower_matrix_add_goal_dialog_new_goal_hint"
            android:maxLines="1"
            android:maxLength="50"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/selectDeadlineButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/goalNameInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/goalNameInputLayout"
        app:layout_constraintStart_toEndOf="@id/goalNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_calendar"
        app:tint="@color/colorTaskUrgentImportant" />

    <TextView
        android:id="@+id/chooseMatrixPositionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goalNameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/eisenhower_matrix_add_goal_dialog_choose_matrix_position"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <RadioGroup
        android:id="@+id/matrixPositionRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chooseMatrixPositionText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonUrgentImportant"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radioButtonNotUrgentImportant"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radioButtonUrgentNotImportant"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:button="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radioButtonNotUrgentNotImportant"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:button="@android:color/transparent" />

    </RadioGroup>

    <TextView
        android:id="@+id/chooseActivityAreaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goalNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/eisenhower_matrix_add_goal_dialog_choose_activity_area"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <RadioGroup
        android:id="@+id/activityPoolRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chooseActivityAreaText"
        app:layout_constraintEnd_toEndOf="@id/chooseActivityAreaText"
        android:layout_marginTop="5dp">

        <!-- foreground adds a ripple to the buttons; makes them look a little nicer :) -->
        <RadioButton
            android:id="@+id/radioButtonWork"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:paddingHorizontal="10dp"
            android:foreground="?selectableItemBackground"
            android:button="@android:color/transparent"
            android:text="@string/user_activity_type_work"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioButtonEssential"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:foreground="?selectableItemBackground"
            android:button="@android:color/transparent"
            android:text="@string/user_activity_type_essential"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioButtonRewards"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:foreground="?selectableItemBackground"
            android:button="@android:color/transparent"
            android:text="@string/user_activity_type_rewards"
            android:textAlignment="center" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>