<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exerciseCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="15dp"
    app:contentPadding="10dp"
    android:layout_marginHorizontal="25dp"
    android:layout_marginBottom="5dp"
    android:clipToPadding="false"
    android:clipChildren="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/exerciseTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/pinIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@id/exerciseTitleText"
            app:layout_constraintBottom_toBottomOf="@id/exerciseTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/colorIconTint"
            android:src="@drawable/ic_pin" />

        <TextView
            android:id="@+id/lastActivityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/exerciseTitleText"
            android:text="@string/library_exercise_last_activity" />

        <TextView
            android:id="@+id/lastActivityTimeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastActivityText"
            app:layout_constraintStart_toStartOf="@id/lastActivityText"
            app:layout_constraintEnd_toEndOf="@id/lastActivityText"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textAlignment="center"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/totalTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/lastActivityText"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/library_exercise_total_time" />

        <TextView
            android:id="@+id/totalTimeTimeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/totalTimeText"
            app:layout_constraintEnd_toEndOf="@id/totalTimeText"
            app:layout_constraintTop_toBottomOf="@id/totalTimeText"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            tools:text="15m" />

        <Button
            android:id="@+id/exerciseInfoButton"
            android:layout_width="0dp"
            android:layout_height="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/exerciseStartButton"
            android:layout_marginEnd="10dp"
            android:padding="0dp"
            android:background="@drawable/round_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/library_exercise_info" />

        <Button
            android:id="@+id/exerciseStartButton"
            android:layout_width="0dp"
            android:layout_height="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/exerciseInfoButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:padding="0dp"
            android:background="@drawable/round_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/library_exercise_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>